[package]
name = "wasm-v1"
version = "0.1.0"
authors = ["leokang2828@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.73"
[dependencies.web-sys]
version = "0.3.50"
features = [
    "console"
]

[lib]
crate-type= ["cdylib"]
